--- a/lec_07.tex
+++ b/lec_07.tex
@@ -11,7 +11,7 @@ Header files are either system header files, which are included using \code{<sys
 It is important to \textbf{not} include a file twice. Also one should never include \code{.c} files.
 
 \paragraph{Macros}
-Macros provide token-based text substitution. A macro is defined using \code{\#define foo bar}. Any appearance of \code{foo} in the code is replaced with \code{baz}. Since macros are purely textual, we can use them for \textit{expressions} too. E.g. \code{\#define inc(x) (x + 1)} will replace \code{inc(1)} with \code{(1 + 1)}.\\
+Macros provide token-based text substitution. A macro is defined using \code{\#define foo bar}. Any appearance of \code{foo} in the code is replaced with \code{bar}. Since macros are purely textual, we can use them for \textit{expressions} too. E.g. \code{\#define inc(x) (x + 1)} will replace \code{inc(1)} with \code{(1 + 1)}.\\
 An undefined, or a defined macro which was removed using \code{\#undef foo} will evaluate to $1$ which evaluates to true in an expression.\\
 Macros can span multiple lines and contains \textit{complex} structures by adding a backslash to the end of the line. The problem we may encounter with macros which represent a expression is that adding a semicolon after the term which gets replaced by the macro, results in two semicolons (if there is one in our macro too). When using the trick of \textit{Semicolon Swallowing}, we put our macro block inside a \code{do {ourMacro} while(0)} block. Adding a semicolon after the macro will no longer result in an error. The compiler removes the loop anyways.\\
 An advantage of macros is to prevent overhead by inlining. But the compiler can do that by itself nowadays.
@@ -45,10 +45,10 @@ Global variables are also declared and the visibility can be controlled using \c
 
 \paragraph{Header Files}
 Header files specify interfaces and should not contain declarations (structs are definitions and not declarations). The module \code{foo} has the interface specified in \code{foo.h} and all clients of \code{foo} are required to include \code{\#include "foo.h"}. The implementation of \code{foo} is typically in the \code{foo.c}, which also must include \code{foo}. This source file ought not contain external declarations but only definitions and internal declarations.\\
-The naming of \code{foo.c} and \code{foo.h} is just a convention which the compiler does not care about. For the execution simple the name of the definition matter.
+The naming \code{foo.c} and \code{foo.h} is just a convention which the compiler does not care about (i.e. they can have different names). For the execution simple the name of the definition matter.
 
 \paragraph{CPP Convention}
-One should never include the same header file twice or redeclare macros. Therefore, it is convenient to have a mechanism which prevents this. The following boilerplate ensures that:
+One should never include the same header file twice or redeclare macros. Therefore, it is convenient to have a mechanism which prevents this. The following boilerplate ensures that the header file containing the code cannot be imported twice.
 
 \begin{lstlisting}
 \#ifndef __FILE_H_
@@ -57,7 +57,7 @@ One should never include the same header file twice or redeclare macros. Therefo
 \#endif
 \end{lstlisting}
 
-\code{\_\_FILE\_H\_} is the name if the program.
+\code{\_\_FILE\_H\_} is the name if the program (or something like that).
 
 \subsubsection{Function Pointers}
 Function pointers are pointers for functions. For example in \code{int (*funct)(int *, char);} \code{func} is a pointer to a function which takes two arguments, a pointer to int and a char. The return value of the function is int. Function pointers are rare in OOP languages, but they are sometimes referenced as \textit{delegates} or \textit{agents}.\\
@@ -79,10 +79,14 @@ The second usecase is visualized here:
 \includegraphics[width=0.8\textwidth]{07_CleanupCode.png}
 
 \subsubsection{setjmp() and longjmp()}
-The function \code{int setjmp\(jmp_buf env\)}, which must be imported with \code{<setjmp.h>}, saves the current stack state and environment to \code{env}. Then it returns $0$.
+They are imported with \code{<setjmp.h>}. The function \verb+int setjmp(jmp_buf env)+ saves the current stack state and environment to \code{env}. Then it returns $0$.
 
-The function \code{void longjmp\(jmp_buf env, int val\)} takes a buffer of \code{setjmp} and causes the \code{setjmp} to return again the value of \code{val} or $1$ if $val = 0$. For each \code{setjmp}, this can only be done once and also only as long as the function containing \code{setjmp} has not returned.\\
+The function \verb+void longjmp(jmp_buf env, int val)+ takes a buffer of \code{setjmp} and causes the \code{setjmp} to return again the value of \code{val} or $1$ if $val = 0$. For each \code{setjmp}, this can only be done once and also only as long as the function containing \code{setjmp} has not returned.\\
 This construct is very unique to C.
+
+It can be used like:
+
+\includegraphics[width=0.8\textwidth]{07_setjump.png}
 
 \subsubsection{Coroutine}
 Coroutines are methods which are both at the top of the stack at the same times. Both routines should be able to call eachother to transfer e.g. data. They look similar to threads but they are not. In essence they allow dynamically switching between functions.
@@ -93,4 +97,4 @@ Coroutines are completely based on \code{setjmp} and \code{longjmp}.
 
 Coroutines are sometimes called \textit{Lightweight threads}, \textit{Protothreads}, \textit{Cooperative mtultitasking}... Thread based programming is based on this schema and we can make coroutines look like threads by dynamically switching into different functions. But there is no concurrently and no parallelism.
 
-The comma is an operator which takes two statements. Both are evaluated, but only the second one is returned.
+Sidenote; The comma \verb+a() , b()+ is an operator which takes two statements. Both are evaluated, but only the second one is returned.
