--- a/lec_13.tex
+++ b/lec_13.tex
@@ -14,7 +14,6 @@ When we compile a file using ggc, the \code{-g} flag makes sure that debugging i
             \item We can put function which may be reused in a dedicated file. This allow for simple reuse as well as lower memory usage when loading this function, since the file only contains code we actually need.
         \end{itemize}
 \end{description}
-\paragraph{Modularity}
 
 \subsubsection{What does a Linker do?}
 Linking is a two-step process:
@@ -65,7 +64,7 @@ Symbols which are defined as globals in a certain module.
 Symbols which are referenced in a certain module, but defined in another module. One can prepend external symbols by \code{extern}. This is not required, nevertheless, one should always do it for good practice.
 
 \paragraph{Local Symbols}
-Symbols which are defined and referenced only in a certain module. However, they are \textbf{not} local program variables. Linkers are not aware of any local program variables.
+Symbols which are defined and referenced only in a certain module. However, they are \textbf{not} local program variables. Linkers are not aware of any local program variables. I.e. these are global variables preprinted with \code{static}.
 
 \paragraph{Example Linker}
 Given the following code, we can find the symbols and their type:
@@ -76,7 +75,7 @@ The linker combines them as follows into an executable. The system code and data
 
 \includegraphics[width=0.8\textwidth]{13_realocatingCodeData.png}
 
-In the disassembled .tex section of main.o we see, that the compiler does not know where swap is. Instead, it inserted an entry into the symbol table (the string in read). String tells that at address $a$ there are $4$ bytes which need to be filled with the address of the function called \code{swap}. The \code{R\_X86\_64\_PC32} means it is a reallocation entry for a x86-32 processor which used pc relative $32$ addressing. This information allows the linker to fill in the right address.
+In the disassembled .text section of main.o we see, that the compiler does not know where swap is. Instead, it inserted an entry into the symbol table (the string in red). That string tells that at address $a$ there are $4$ bytes which need to be filled with the address of the function called \code{swap}. The \code{R\_X86\_64\_PC32} means it is a reallocation entry for a x86-32 processor which used pc relative $32$ addressing. This information allows the linker to fill in the right address.
 
 \includegraphics[width=0.8\textwidth]{13_ex_maintext.png}
 
@@ -107,11 +106,11 @@ And the .data and .bss. We notice that all addresses are only $8$ bytes long. Th
 \end{description}
 
 \paragraph{Linker's Symbol Rules}
-Then multiple symbols with the same name are given the linker proceeds as follows:
+When multiple symbols with the same name are given the linker proceeds as follows:
 
 \begin{enumerate}
-    \item Multiple string symbols are not allowed. This leads to a linker error.
-    \item When given a strong and multiple weak symbols, the liner always chooses string symbol. So, references to the weak symbol resolve to the strong one.
+    \item Multiple strong symbols are not allowed. This leads to a linker error.
+    \item When given a strong and multiple weak symbols, the liner always chooses strong symbol. So, references to the weak symbol resolve to the strong one.
     \item When given multiple weak symbols, the linker picks one arbitrary. This can lead to weird problems. E.g. when there are two structs with the same name and same size, but different fields (one has two ints, the other one double), the linker may select one at random and when writing to e.g. the address of the first int, we may be dealing with a double of the size of both ints. This problem may also arise when we combine code which was compiled by different compiler which have different alignment rules.
 \end{enumerate}
 
@@ -167,16 +166,3 @@ Shared libraries are also called dynamic link libraries (DLLs) and they can be s
 \includegraphics[width=0.8\textwidth]{13_runtimeI.png}
 
 \includegraphics[width=0.8\textwidth]{13_runtimeII.png}
-
-
-
-
-
-main+addr is used then the location of the function is unknown. The linker is responsible to fill in the missing address at address $a$. The red string is stored in the symbol table. 
-
-.bss-0x8 stands for the rip we do not know. The buf+0x4 is a scalar value and is the 
-
-compiling p2 alone, we get something in the .bss called foo
-compiling p1 alone, we get something in the .data called foo
-
-if the two files are linked together, we only get one foo, and this is the p1 because the linkers sees assumes that the foos are equivalent
