NEW: Recipe environment

--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,9 @@
 \newcommand{\subsubcolorsection}[1]{%
 	\colorbox{blue!40}{\parbox[t][0em]{\dimexpr\columnwidth-2\fboxsep}{\thesubsubsection\ #1}}}
 
+\newcommand{\recipe}[1]{%
+	\colorbox{green!60}{\parbox[t][0em]{\dimexpr\columnwidth-2\fboxsep}{R: #1}}}
+
 % shrink horizontal padding in table
 \setlength{\tabcolsep}{0.3em}
 
